src/stylesheets/modules/forms/select.styl
.inline-select
  background: transparent
  color: inherit
  font-size: inherit
  margin: 0
  margin-top: -1px

/*
Select boxes

Markup:
p
  select.cfnext-select-box
    option value
    option more
  i.cfnext-select-box-icon.fa.fa-caret-down

Styleguide 5.2
*/

$select-box-line-height = 2em
.cfnext-select-box
  $button()
  $button-tertiary()
  padding: 1px 1.6em 0 0.6em
  line-height: $select-box-line-height
  color: inherit
  font-size: inherit
  font-family: inherit
  cursor: inherit
  -webkit-appearance: none
  -moz-appearance: none
  appearance: none
  outline: 0
  &:hover, &:focus, &:active
    border-color: $gray

.cfnext-select-box-icon
  position: relative
  width: 0
  line-height: $select-box-line-height
  left: -1.2em
  top: 1px
  pointer-events: none

/**
 * @deprecated
 */
.select-box
  padding: 1px 0 0 0;
  select
    padding-left: 0.6em
    padding-right: 1.6em
    line-height: $select-box-line-height
    margin: 0
    color: inherit
    font-size: inherit
    font-family: inherit
    border: none
    background: transparent
    border-radius: 0
    -webkit-appearance: none
    -moz-appearance: none
    appearance: none
  &:hover
    border-color: $gray
  .button-icon-right
    position: absolute
    left: auto
    float: none
    right: 7px
    top: 7px
    cursor: default
    pointer-events: none

